fix: replace ws lib in client too

--- a/ClientExampleDotNet/ClientExampleDotNet.csproj
+++ b/ClientExampleDotNet/ClientExampleDotNet.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="WebSocketSharp" Version="1.0.3-rc11" />
+    <PackageReference Include="websocketsharp.core" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
