--- a/WebsocketCollabServer/WebsocketCollabServer.csproj
+++ b/WebsocketCollabServer/WebsocketCollabServer.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="Serilog" Version="3.1.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
-    <PackageReference Include="websocketsharp.core" Version="1.0.0" />
+    <PackageReference Include="WebSocketSharp" Version="1.0.3-rc11" />
   </ItemGroup>
 
 </Project>
